# cAgent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/androidTest/java/com/example/cagent/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencl_stub.c
app/src/main/java/com/example/cagent/: MainActivity.kt
app/src/main/java/com/example/cagent/llm/: LlmEngine.kt
app/src/main/java/com/example/cagent/model/: ChatMessage.kt
app/src/main/java/com/example/cagent/storage/: BundledModelImporter.kt  ModelStore.kt
app/src/main/java/com/example/cagent/ui/: AppNav.kt  ChatScreen.kt  ChatViewModel.kt  ModelsScreen.kt  ModelsViewModel.kt
app/src/main/java/com/example/cagent/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/cagent/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
